# ai-engineer-playbook

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  menu.py  pyproject.toml  requirements.txt
.github/workflows/: rag-system-aks.yml  research-agent-aks.yml  services-aks.yml
dashboard/: index.html  main.py
deploy/azure/: README.md  github-federated-credential.main.json.example  oidc-setup.md
deploy/helm/: README.md
docs/: architecture.md  architecture_nhi.md  interview_prep_guide.md  max_ai_case_study.md  pattern_deep_dive.md  roadmap.md  security.md  security_shield.md  services.md
docs/architecture/: 2025-ai-architecture-stack.md
docs/interview-prep/: how-to-talk-about-your-projects.md
docs/mcp/: easiest-mcp-gateway.md  mcp-gateway-architecture.md  tool-access-control.md
docs/projects/: 5-projects-for-interviews.md  project-scorecard-template.md
docs/purple_ai_prep/: implementation_plan.md  purple_mastery_playbook.md  task.md  walkthrough.md
docs/roadmap/: 30-day-roadmap.md
docs/security/: owasp-llm-and-guardrails.md
gyani/: ai_102_2_day_crash_sheet.md  ai_103_crash_sheet.md  ai_security_architect_strategy.md
helm-templates/base-api-chart/: Chart.yaml  values.yaml
infra/terraform/: main.tf
k8s/: Dockerfile  README.md  api.py  issuer-prod.yaml
k8s/helm/: Chart.yaml  values.yaml
mcp-gateway/app/: auth.py  main.py  models.py  tools.py
projects/ai_perf_eval/: Dockerfile  docker-compose.yml
scripts/: bootstrap.sh
templates/: eval-dataset-template.json  project-readme-template.md
tests/: test_basic.py
(+398 files in other folders)
