[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineer-packages"
version = "0.1.0"
description = "Shared core packages for AI Engineer projects"
authors = [{name = "Antigravity", email = "ai@example.com"}]
dependencies = [
    "pydantic",
    "pydantic-settings",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]
